--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	 <body>
 	      <h1>ALUNO:Luan Lopes</h1>
 		  <h2>Curso: Desenvolvimento de Sistemas</h2>
-		  <h3>Alunos (40)></h3>
+		  <h3>Alunos (40):</h3>
 		  <ul>
 		     <li>Lucas</li>
 			 <li>Gabriel</li>
