Altualização do projeto

--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
-     <head>
-	      <title>Senai Alunos Desen. de Sistemas</title>
-	 </head>
-	 <body>
-	      <h1>ALUNO:Luan Lopes</h1>
-		  <h2>Curso: Desenvolvimento de Sistemas</h2>
-		  <h3>Alunos (40):</h3>
-		  <ul>
-		     <li>Lucas</li>
-			 <li>Gabriel</li>
-			 <li>Guilherme</li>
-		  </ul>
-	 </body>
+    <head>
+	     <title>Senai alunos desen. de sistemas
+		 </title>
+	</head>
+	<body>
+	    <h1>ALUNO: Luan Lopes</h1>
+		<h2>Curso: Desenvolvimento de Sistemas</h2>
+		<h3>Alunos (40):</h3>
+	<ul>
+	    <li>Lucas</li>
+		<li>Gabriel</li>
+		<li>Ricardo</li>
+		<li>Rafael</li>
+	</ul>
+	</body>
 
 </html>
